After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781946 - Non-native decorated windows stuck maximised on secondary screen with Marco/Metacity
Non-native decorated windows stuck maximised on secondary screen with Marco/M...
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2017-04-29 15:17 UTC by Kalle Kadakas
Modified: 2017-06-28 18:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kalle Kadakas 2017-04-29 15:17:40 UTC
Hello,

A strange issue which happens only with Marco/Metacity WM.
When maximising the Chrome/Chromium window on a secondary monitor, I can no longer control the window. Cannot minimise it, resize it, nor move it. I can only close the window.
Best to explain the behaviour with a video:
https://goo.gl/photos/sLFUgniFs5niVyC66
In the video, the Picture in Picture screen is the primary screen1 and the big screen on the background is the secondary screen2. Resolutions are the same and the issue only occurs while using Marco WM. (tested with xfwm, compiz0.9, mutter, all work fine except Marco/metacity)

Sidenote: when viewing the video, please don't mind the background picture, it means no offence.

If there is any info or details I could provide, please let me know, I'm happy to help as I wish this to get resolved.

OS: Arch Linux
Kernel: x86_64 Linux 4.10.11-1-ARCH
DE: MATE 1.18.0
WM: Metacity (Marco)
marco 1.18.0-1

Thank you!

Info here:
https://github.com/mate-desktop/marco/issues/316#issuecomment-297416901

Happens with Steam and Chrome/Chromium windows.
Issue happens with Metacity WM.
Comment 1 Alberts Muktupāvels 2017-04-29 17:48:37 UTC
Can you try to restart metacity with --no-force-fullscreen option? I think that will "fix" this problem...
Comment 2 Kalle Kadakas 2017-04-30 13:51:55 UTC
Correct, on both Marco and Metacity, when starting with --no-force-fullscreen option, the issue disappears!
Comment 3 Kalle Kadakas 2017-05-26 06:04:00 UTC
Are there any news on this?
I mean, we do have a workaround, but that is NOT a solution... we need a permanent patch for it.
Comment 4 Alberts Muktupāvels 2017-05-30 10:17:44 UTC
No, I have not had time to fix this yet.
Comment 5 Alberts Muktupāvels 2017-06-28 18:29:39 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.