window: handle legacy fullscreen requests

https://gitlab.gnome.org/GNOME/metacity/commit/1fafd279006ece8cf664fd777143cdfafbefad6d

window: handle legacy fullscreen requests

Doing this on the actual resize requests makes more sense
than handling it as a window-manager imposed constraints,
so move the code accordingly.

Adapted from mutter patch by Florian Müllner:
https://git.gnome.org/browse/mutter/commit/?id=fba022cc06b8c7e80ef36f48d6577a251384cc4b

https://bugzilla.gnome.org/show_bug.cgi?id=781946

Bug 781946 - Non-native decorated windows stuck maximised on secondary screen with Marco/Metacity